syntax = "proto3";

package pb;

option go_package = "music-app-backend/pb";

import "google/protobuf/timestamp.proto";

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}